...
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:textSize="@dimen/name_top" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favoriteActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/favBTN_marginTop"
        android:layout_marginEnd="18dp"
        android:clickable="true"
...
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/border"
                android:paddingStart="10dp"
                android:paddingBottom="5dp"
...
